backend_test_output_3.log
Reusing configuration cache.
> Task :backend:processTestResources UP-TO-DATE
> Task :backend:processResources UP-TO-DATE

> Task :backend:compileJava
/app/backend/src/main/java/sgc/painel/PainelService.java:119: error: cannot find symbol
            alertasPage = alertaService.listarPorUsuario(usuarioTitulo, sortedPageable);
                                       ^
  symbol:   method listarPorUsuario(String,Pageable)
  location: variable alertaService of type AlertaService
/app/backend/src/main/java/sgc/painel/PainelService.java:123: error: cannot find symbol
            alertasPage = alertaService.listarPorUnidades(unidadeIds, sortedPageable);
                                       ^
  symbol:   method listarPorUnidades(List<Long>,Pageable)
  location: variable alertaService of type AlertaService
/app/backend/src/main/java/sgc/painel/PainelService.java:125: error: cannot find symbol
            alertasPage = alertaService.listarTodos(sortedPageable);
                                       ^
  symbol:   method listarTodos(Pageable)
  location: variable alertaService of type AlertaService
/app/backend/src/main/java/sgc/painel/PainelService.java:133: error: cannot find symbol
                                        .obterDataHoraLeitura(alerta.getCodigo(), usuarioTitulo)
                                        ^
  symbol:   method obterDataHoraLeitura(Long,String)
  location: variable alertaService of type AlertaService
4 errors

> Task :backend:compileJava FAILED

[Incubating] Problems report is available at: file:///app/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':backend:compileJava'.
> Compilation failed; see the compiler output below.
  /app/backend/src/main/java/sgc/painel/PainelService.java:119: error: cannot find symbol
              alertasPage = alertaService.listarPorUsuario(usuarioTitulo, sortedPageable);
                                         ^
    symbol:   method listarPorUsuario(String,Pageable)
    location: variable alertaService of type AlertaService
  /app/backend/src/main/java/sgc/painel/PainelService.java:123: error: cannot find symbol
              alertasPage = alertaService.listarPorUnidades(unidadeIds, sortedPageable);
                                         ^
    symbol:   method listarPorUnidades(List<Long>,Pageable)
    location: variable alertaService of type AlertaService
  /app/backend/src/main/java/sgc/painel/PainelService.java:125: error: cannot find symbol
              alertasPage = alertaService.listarTodos(sortedPageable);
                                         ^
    symbol:   method listarTodos(Pageable)
    location: variable alertaService of type AlertaService
  /app/backend/src/main/java/sgc/painel/PainelService.java:133: error: cannot find symbol
                                          .obterDataHoraLeitura(alerta.getCodigo(), usuarioTitulo)
                                          ^
    symbol:   method obterDataHoraLeitura(Long,String)
    location: variable alertaService of type AlertaService
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 7s
3 actionable tasks: 1 executed, 2 up-to-date
Configuration cache entry reused.
